fix loading delay issue with api analytics
- added loading indicators
- roated and enlarged the y axis label to get it out of the way of the value labels overlapping
- locked the scale of the pagination for the response time
- added some logic for messaging around pm exceptions
- fixed incorrect label on response time chart

- update error log syntax

--- a/client/less/api-analytics.less
+++ b/client/less/api-analytics.less
@@ -1,6 +1,26 @@
 .api-analytics {
   margin: 0 2rem;
 
+  text {
+    font: @font-family-sans-serif;
+    font-size:110%;
+  }
+
+  rect.background {
+    fill: white;
+  }
+
+  .axis {
+    shape-rendering: crispEdges;
+  }
+
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+  }
+
+
   .pagination {
     text-align: right;
     display: block;
